Putting more things

--- a/main.tex
+++ b/main.tex
@@ -188,6 +188,8 @@
 
 \begin{abstract}
 % What is the problem
+
+
 % Why is the problem a problem?
 % What's the surprising Idea?
 % What's the consequence?
@@ -219,9 +221,53 @@
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Klotz} \seclabel{klotz}
 
+%=======
+\subsection{Klotz in a nutshell} \seclabel{nutshell}
+
+%=======
+\subsection{Scripting visualizations with Klotz} \seclabel{scripting}
+
+%=======
+\subsection{The third dimension} \seclabel{3d}
+
+\paragraph{Distinguish the depth} Light? Perspective? 
+
+\paragraph{Edges} Display edges?
+
+\paragraph{Layout}
+
+\paragraph{Composition}
+
+%=======
+\subsection{Properties} \seclabel{properties}
+
+\begin{itemize}
+\item \emph{The visualization engine should be domain independent.}
+\item \emph{Visualizations should be easily composed from simpler parts.}
+\item \emph{The visualization should be definable at a fine grained level.}
+\item \emph{Object creation overhead should be kept to a minimum.}
+\item \emph{The visualization description should be declarative.}
+\end{itemize}
+
+%:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Applications} \seclabel{applications}
+
+%=======
+\subsection{Codecity}
+
+%=======
+\subsection{Scatterplot}
+
+
+%:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\section{Implementation} \seclabel{implementation}
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Related Work} \seclabel{relatedwork}
+
+Lumiere~\cite{Oliv09a}
+
+CodeCity~\cite{Wett08d}
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Conclusion} \seclabel{conclusion}
