--- a/main.tex
+++ b/main.tex
@@ -15,20 +15,13 @@
 \documentclass[runningheads]{llncs}
 %\documentclass{sig-alternate}
 
-
-%\usepackage{latex8}
-%\usepackage{times}
-
-%\documentstyle{llncs}
-%\documentclass[preprint,10pt]{sigplanconf}
 % constants
 \newcommand{\Title}{Klotz: Agile 3D Visualization}
 \newcommand{\TitleShort}{\Title}
 \newcommand{\Authors}{Ricardo Jacas~~~~~Alexandre Bergel}
 \newcommand{\AuthorsShort}{R. Jacas, A. Bergel}
 
-
-
+% packages
 \usepackage{xspace}
 \usepackage{ifthen}
 \usepackage{amsbsy}
@@ -40,9 +33,7 @@
 \usepackage{needspace}
 \usepackage{microtype}
 \usepackage{bold-extra}
-\usepackage{subfigure}
-\usepackage{wrapfig}
-\usepackage{listings}
+
 
 % references
 \usepackage[colorlinks]{hyperref}
@@ -58,102 +49,122 @@
 	pdfauthor={\Authors},
 	pdftitle={\Title}}
 
-%
-%\usepackage{amssymb}
-%\usepackage{graphicx}
-%%\usepackage{amsthm}
-%\usepackage{ifthen}
-%\usepackage{xspace}
-%\usepackage{alltt}
-%%\usepackage{psfig} 
-%\usepackage{latexsym}
-%\usepackage[latin1]{inputenc}
-%%\usepackage{psfig}
-%\usepackage{url}            
-%%\usepackage{amssymb}
-%%\usepackage{amsfonts}
-%%\usepackage{amsmath}
-%\usepackage{stmaryrd}
-%\usepackage{enumerate}
-%\usepackage{cite}
-%\usepackage[pdftex,colorlinks=true,pdfstartview=FitV,linkcolor=blue,citecolor=blue,urlcolor=blue]{hyperref}
-%\usepackage{xspace}
-%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
+\def\chapterautorefname{Chapter}
+\def\appendixautorefname{Appendix}
+\def\sectionautorefname{Section}
+\def\subsectionautorefname{Section}
+\def\figureautorefname{Figure}
+\def\tableautorefname{Table}
+\def\listingautorefname{Listing}
 
-\newcommand{\myhref}[1]{\href{http://#1}{#1}}
-
-%%%%%%%%%%%%%%%%%%%
-% Please remove this for the camera ready
-%%%%%%%%%%%%%%%%%%%
-\pagenumbering{arabic}
-\pagestyle{plain}
-%%%%%%%%%%%%%%%%%%%
-%%%%%%%%%%%%%%%%%%%%%%%%%
-%:Generic Macros
-\newboolean{showcomments}
-\setboolean{showcomments}{false}
-\ifthenelse{\boolean{showcomments}}
-  {\newcommand{\bnote}[2]{
-	\fbox{\bfseries\sffamily\scriptsize#1}
-    {\sf\small$>$\textit{#2}$<$}
-    % \marginpar{\fbox{\bfseries\sffamily#1}}
-   }
-   \newcommand{\cvsversion}{\emph{\scriptsize$-$Id: macros.tex,v 1.1.1.1 2007/02/28 13:43:36 bergel Exp $-$}}
-  }
-  {\newcommand{\bnote}[2]{}
-   \newcommand{\cvsversion}{}
-  } 
-
-\newcommand{\etal}{\emph{et al.}\xspace}
-\newcommand{\here}{\mynote{***}{CONTINUE HERE}}
-\newcommand\nb[1]{\mynote{NB}{#1}}
-\newcommand\fix[1]{\mynote{FIX}{#1}}
-\newcommand\ab[1]{\bnote{Alex}{#1}}
-\newcommand\rr[1]{\bnote{Romain}{#1}}
-\newcommand\tk[1]{\bnote{Tobias}{#1}}
-\newcommand\fb[1]{\bnote{Felipe}{#1}}
-\newcommand\lr[1]{\bnote{Lukas}{#1}}
-\newcommand\ml[1]{\bnote{Mircea}{#1}}
-
-
-\newcommand{\sep}{\texttt{>>}\xspace}
-
-\newcommand{\stBar}{$\mid$}
-\newcommand{\ret}{\^{}}
-\newcommand{\myparagraph}[1]{\noindent\textbf{#1.}}
-\newcommand{\eg}{e.g.,\xspace}
-\newcommand{\ie}{i.e.,\xspace}
-\newcommand{\co}[1]{{\small\textsf{#1}\xspace}}
-\newcommand{\secref}[1]{Section \ref{sec:#1}}
-\newcommand{\seclabel}[1]{\label{sec:#1}}
-\newenvironment{tcode}
-    {\footnotesize\sf\begin{tabbing} xx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=xxxxxx\=\kill}
-%xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=xx\=\kill}
-    {\end{tabbing}\sf\normalsize}
-
-\newcommand{\figref}[1]{Figure~\ref{fig:#1}}
-\newcommand{\figlabel}[1]{\label{fig:#1}}
-\newcommand{\tablabel}[1]{\label{tab:#1}}
-\newcommand{\tabref}[1]{Table~\ref{tab:#1}}
-
-\usepackage[normalem]{ulem} % for \sout
+% source code
 \usepackage{xcolor}
-\usepackage{color}
+\usepackage{textcomp}
+\usepackage{listings}
+\definecolor{source}{gray}{0.9}
+\lstset{
+	language={},
+	% characters
+	tabsize=3,
+	upquote=true,
+	escapechar={!},
+	keepspaces=true,
+	breaklines=true,
+	alsoletter={\#:},
+	breakautoindent=true,
+	columns=fullflexible,
+	showstringspaces=false,
+	basicstyle=\footnotesize\sffamily,
+	% background
+	frame=single,
+    framerule=0pt,
+	backgroundcolor=\color{source},
+	% numbering
+	numbersep=5pt,
+	numberstyle=\tiny,
+	numberfirstline=true,
+	% captioning
+	captionpos=b,
+	% formatting (html)
+	moredelim=[is][\textbf]{<b>}{</b>},
+	moredelim=[is][\textit]{<i>}{</i>},
+	moredelim=[is][\color{red}\uwave]{<u>}{</u>},
+	moredelim=[is][\color{red}\sout]{<del>}{</del>},
+	moredelim=[is][\color{blue}\underline]{<ins>}{</ins>}}
+\newcommand{\ct}{\lstinline[backgroundcolor=\color{white},basicstyle=\footnotesize\ttfamily]}
+\newcommand{\lct}[1]{{\small\tt #1}}
+
+% tikz
+% \usepackage{tikz}
+% \usetikzlibrary{matrix}
+% \usetikzlibrary{arrows}
+% \usetikzlibrary{external}
+% \usetikzlibrary{positioning}
+% \usetikzlibrary{shapes.multipart}
+% 
+% \tikzset{
+% 	every picture/.style={semithick},
+% 	every text node part/.style={align=center}}
+
+% proof-reading
+\usepackage{xcolor}
+\usepackage[normalem]{ulem}
 \newcommand{\ra}{$\rightarrow$}
 \newcommand{\ugh}[1]{\textcolor{red}{\uwave{#1}}} % please rephrase
 \newcommand{\ins}[1]{\textcolor{blue}{\uline{#1}}} % please insert
 \newcommand{\del}[1]{\textcolor{red}{\sout{#1}}} % please delete
 \newcommand{\chg}[2]{\textcolor{red}{\sout{#1}}{\ra}\textcolor{blue}{\uline{#2}}} % please change
+\newcommand{\chk}[1]{\textcolor{ForestGreen}{#1}} % changed, please check
+
+% comments \nb{label}{color}{text}
+\newboolean{showcomments}
+\setboolean{showcomments}{true}
+\ifthenelse{\boolean{showcomments}}
+	{\newcommand{\nb}[3]{
+		{\colorbox{#2}{\bfseries\sffamily\scriptsize\textcolor{white}{#1}}}
+		{\textcolor{#2}{\sf\small$\blacktriangleright$\textit{#3}$\blacktriangleleft$}}}
+	 \newcommand{\version}{\emph{\scriptsize$-$Id$-$}}}
+	{\newcommand{\nb}[2]{}
+	 \newcommand{\version}{}}
+\newcommand{\rev}[2]{\nb{Reviewer #1}{red}{#2}}
+\newcommand{\ab}[1]{\nb{Alexandre}{blue}{#1}}
+\newcommand{\vp}[1]{\nb{Vanessa}{orange}{#1}}
+
+% graphics: \fig{position}{percentage-width}{filename}{caption}
 \DeclareGraphicsExtensions{.png,.jpg,.pdf,.eps,.gif}
 \graphicspath{{figures/}}
 \newcommand{\fig}[4]{
-       \begin{figure}[#1]
-               \centering
-               \includegraphics[width=#2\textwidth]{#3}
-               \caption{\label{fig:#3}#4}
-       \end{figure}}
-%%%%%%%%%%%%%%%%%%%%%%%%%
-%:Specialized macros
+	\begin{figure}[#1]
+		\centering
+		\includegraphics[width=#2\textwidth]{#3}
+		\caption{\label{fig:#3}#4}
+	\end{figure}}
+\newcommand{\largefig}[4]{
+	\begin{figure*}[#1]
+		\centering
+		\includegraphics[width=#2\textwidth]{#3}
+		\caption{\label{fig:#3}#4}
+	\end{figure*}}
+
+% abbreviations
+\newcommand{\ie}{\emph{i.e.,}\xspace}
+\newcommand{\eg}{\emph{e.g.,}\xspace}
+\newcommand{\etc}{\emph{etc.}\xspace}
+\newcommand{\etal}{\emph{et al.}\xspace}
+
+% lists
+\newenvironment{bullets}[0]
+	{\begin{itemize}}
+	{\end{itemize}}
+
+\newcommand{\seclabel}[1]{\label{sec:#1}}
+\newcommand{\figlabel}[1]{\label{fig:#1}}
+\newcommand{\figref}[1]{Figure~\ref{fig:#1}}
+\newcommand{\secref}[1]{Section~\ref{sec:#1}}
+\newcommand{\tablabel}[1]{\label{tab:#1}}
+\newcommand{\tabref}[1]{Table~\ref{tab:#1}}
+
+\newcommand{\myparagraph}[1]{\noindent \textbf{#1.}}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%
 
@@ -233,9 +244,11 @@
 
 %=======
 \subsection{Klotz in a nutshell} \seclabel{nutshell}
-Klotz is a Framework, based on quite simple 3D graphic elements,
+Klotz is a \chg{F}{f}ramework, based on \del{quite} simple 3D graphic elements,
 that are meant to work as metrics to specify characteristics of
 code. The elements to work with are cubes and edges between them.
+
+\ins{The goal of Klotz is to offer a flexible solution to visualize software in 3 dimensions. Klotz offer a scripting language, an API and an easel to ``compose'' a visualization.}
 
 The main challenge of Klotz is to let the user manage all three 
 dimensions of each cube as metrics and also parametrize the color 
@@ -250,11 +263,15 @@ it defines the way every \emph{edge} will be draw (the \emph{edge}
 depends on the previous definition of the \emph{cubes}).
 
 \begin{lstlisting}
-view nodes: KLEaselCommand  subclasses.
-view applyLayout: (KLSphereLayout new).
+| elementsToVisualize |
+elementsToVisualize := KLEaselCommand  subclasses.
+view nodes: elementsToVisualize.
+view applyLayout: KLSphereLayout new.
+
 view node: KLEaselCommand using: (KLCube new fillColor: Color random).
-view edges: (KLEaselCommand  subclasses) from: #yourself to: #superclass.   
+view edges: elementsToVisualize from: #yourself to: #superclass.   
 \end{lstlisting}
+
 \fig{}{0.5}{example.png}{KLEaselCommand subclasses.}
 
 
