some more advances on the scripting explanation|

--- a/main.tex
+++ b/main.tex
@@ -317,7 +317,7 @@ view edges: (1 to: 20) from: #yourself to:  21
 \end{lstlisting}
 \fig{}{0.5}{figure4.png}{Basic edges}
 
-And also as the previuos definition the keyword \emph{using:} is used
+And also as the previous definition the keyword \emph{using:} is used
 to define the metrics of the \emph{edge} itself.  
 \begin{lstlisting}
 view nodes: (1 to: 20).
