some minor image mismatch changed

--- a/main.tex
+++ b/main.tex
@@ -310,21 +310,16 @@ Just like it happens with the \emph{nodes}, the \emph{edges} can be defined in
 4 ways: The instructions \emph{edge: from: to:} and \emph{edges: from: to:} 
 apply, respectively, the \emph{edge} (\emph{edges}) between 2 cubes, each \emph{edge}.
 \begin{lstlisting}
-view nodes: (1 to: 20).
-view applyLayout: (KLCircleLayout new).	
-view node: 21.
-view edges: (1 to: 20) from: #yourself to:  21
+view nodes: (1 to: 5).	
+view edges: (1 to: 4) from: #yourself to: 5 
 \end{lstlisting}
 \fig{}{0.5}{figure4.png}{Basic edges}
 
 And also as the previous definition the keyword \emph{using:} is used
 to define the metrics of the \emph{edge} itself.  
 \begin{lstlisting}
-view nodes: (1 to: 20).
-view applyLayout: (KLCircleLayout new).	
-view node: 21.
-view edges: (1 to: 20) 
-	from: #yourself to: 21 using: (KLLine new fillColor: Color red  )
+view nodes: (1 to: 5).	
+view edges: (1 to: 4) from: #yourself to: 5 using: (KLLine new width: #yourself)
 \end{lstlisting}
 \fig{}{0.5}{figure5.png}{Basic edges, using metrics}
 
