--- a/main.tex
+++ b/main.tex
@@ -244,12 +244,12 @@
 
 %=======
 \subsection{Klotz in a nutshell} \seclabel{nutshell}
-Klotz is a \chg{F}{f}ramework, based on simple 3D graphic elements,
+Klotz is a Framework, based on simple 3D graphic elements,
 that are meant to work as metrics to specify characteristics of
 code. The elements to work with are cubes and edges between them.
 
 The goal of Klotz is to offer a flexible solution to visualize software 
-in 3 dimensions. Klotz offer\ins{s} a scripting language, an API and an easel to 
+in 3 dimensions. Klotz offers a scripting language, an API and an easel to 
 ``compose'' a visualization. 
 
 The example below shows this very main goal: the script creates a group of
@@ -276,10 +276,10 @@ view edges: elementsToVisualize from: #yourself to: #superclass.
 
 %=======
 \subsection{Scripting visualizations with Klotz} \seclabel{scripting}
-The Klotz scripting l\chg{e}{a}nguage is based on Pharo Smalltalk
+The Klotz scripting lenguage is based on Pharo Smalltalk
 (since the application is made on it) and 4 basic principles
 to manage the interaction between the elements on the \emph{view}:
-The use of \emph{nodes}(i) to represent the elements that are \del{been}
+The use of \emph{nodes}(i) to represent the elements that are
 displayed, \emph{edges}(ii) to represent the relationship between
 the selected \emph{nodes}, \emph{Layouts}(iii) to define the way the
 \emph{view} distributes the objetcs on itself, and a special value
@@ -291,9 +291,9 @@ The instructions \emph{node:} and \emph{nodes:} define standard
 \emph{nodes}(blue colored, "1" length edged \emph{cubes}), to set 1 or many 
 \emph{nodes} at the same time, respectively.
 \begin{lstlisting}
-	view node: Magnitude.
-	view node: Number.
-	view node: Time    
+view node: Magnitude.
+view node: Number.
+view node: Time    
 \end{lstlisting}
 \fig{}{0.3}{figure2.png}{Magnitude class with 2 of his subclasses.}
 Other way to define them, and customise the \emph{cubes} related to the 
