--- a/main.tex
+++ b/main.tex
@@ -352,13 +352,14 @@ A visualization contains one unique light.
 A colorless light is at the same position than the camera. 
 Maximum intensity when a face has orthogonal to the camera.
 
-\paragraph{Managing Perspective}: 
-The Perspective can be managed, and parametrized,
+\paragraph{Managing perspective}: 
+The perspective can be managed, and parametrized,
 in order to emphasize minor (or major) changes on the same
 \emph{model}. The easel provides commands to increase 
 (decrease) the perspective, where increasing the
 perspective means to enlarge the length of the edges on the
 third dimention. 
+
 \paragraph{Commands in the easel} 
 The easel contains XX commands to rotate 
 
