--- a/main.tex
+++ b/main.tex
@@ -372,9 +372,23 @@ that can be generated in 2D, but with the posibility of adding
 some useful metrics on the third dimention. Or to have 
 completely new ways of analisis, making good use of the 3 
 dimensions available.
-
-description of the layouts so far?
-
+Some examples:
+\emph{Cube Layout}: This \emph{layout} display object as a "cube",
+it calculates the nearest perfect cube (8,27,64,etc.), to the
+number of elements, and display the \emph{nodes}, cube root 
+of the result for each direction. if the element are less,
+it leaves the rest blank.
+\begin{lstlisting}
+view 
+	node: 1 using: (KLCube new width: 3; height: 5; depth: 2; yourself);
+	node: 2 using: (KLCube new width: 2; height: 8; depth: 8; yourself);
+	node: 3 using: (KLCube new width: 3; height: 5; depth: 2; yourself);
+	node: 4 using: (KLCube new width: 1; height: 2; depth: 3; yourself);
+	node: 5 using: (KLCube new width: 2; height: 2; depth: 4; yourself);
+	node: 6.
+view applyLayout: (KLCubeLayout new). 
+\end{lstlisting}
+\fig{}{0.3}{figure7.png}{Cube Layout}
 
 \paragraph{Composition}
 
