--- a/main.tex
+++ b/main.tex
@@ -373,7 +373,7 @@ some useful metrics on the third dimention. Or to have
 completely new ways of analisis, making good use of the 3 
 dimensions available.
 Some examples:
-\emph{Cube Layout}: This \emph{layout} display object as a "cube",
+\emph{Cube Layout}: This \emph{layout} display object as a ``cube'',
 it calculates the nearest perfect cube (8,27,64,etc.), to the
 number of elements, and display the \emph{nodes}, cube root 
 of the result for each direction. if the element are less,
