--- a/main.tex
+++ b/main.tex
@@ -363,7 +363,15 @@ third dimention.
 \paragraph{Commands in the easel}: 
 In order to manage the position of the viewer the easel 
 contains 6 commands to rotate, it provides rotation on 
-every axis, on both directions.  
+every axis, on both directions. It includes commands
+to rotate around the X axis (up and down), around the
+Y axis (rotate left, rotate right) and aroun the Z axis
+(left and right). It also contains commands to manage
+the current zoom of the \emph{view} (Zoom in and Zoom out),
+an example panel with some script example of visualizations
+and a previous scripts pane, to remember prior launched examples
+on the easel. % add commands to manage perspective
+   
 
 \paragraph{Layout}: %:still working on it
 The main objective of having a 3D engine is to have richer 
