--- a/main.tex
+++ b/main.tex
@@ -563,6 +563,15 @@ responsibility on the system.
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Implementation} \seclabel{implementation}
+%=======
+\subsection{Performance}
+The current version of \emph{Klotz}, yet not optimaced, provides
+support up to 10000 \emph{nodes} on screen, as well as, 
+10000 \emph{edges} between these \emph{nodes}.
+
+
+
+
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Related Work} \seclabel{relatedwork}
