--- a/main.tex
+++ b/main.tex
@@ -570,8 +570,8 @@ support up to 10000 \emph{nodes} on screen, as well as,
 10000 \emph{edges} between these \emph{nodes}.
 
 
-
-
+\fig{}{0.8}{graph1}{hello world}
+\fig{}{0.8}{graph2}{hello world}
 
 %:%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \section{Related Work} \seclabel{relatedwork}
