--- a/main.tex
+++ b/main.tex
@@ -352,7 +352,7 @@ A visualization contains one unique light.
 A colorless light is at the same position than the camera. 
 Maximum intensity when a face has orthogonal to the camera.
 
-\paragraph{Managing perspective}: %:not implemented yet xD
+\paragraph{Managing perspective}:
 The perspective can be managed, and parametrized,
 in order to emphasize minor (or major) changes on the same
 \emph{model}. The easel provides commands to increase 
@@ -370,7 +370,9 @@ Y axis (rotate left, rotate right) and aroun the Z axis
 the current zoom of the \emph{view} (Zoom in and Zoom out),
 an example panel with some script example of visualizations
 and a previous scripts pane, to remember prior launched examples
-on the easel. % add commands to manage perspective
+on the easel. Finally, it contains commands to manage the 
+perspective, understanding that managing perspective means
+changing the relative position of the viewer.  
    
 
 \paragraph{Layout}:
